--- a/apps/kiosk/package.json
+++ b/apps/kiosk/package.json
@@ -24,7 +24,12 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "electron-updater": "^6.3.9",
-    "postcss": "^8.5.3"
+    "fs-jetpack": "^5.1.0",
+    "postcss": "^8.5.3",
+    "react-hot-toast": "^2.5.2",
+    "react-simple-keyboard": "^3.8.55",
+    "react-touch-screen-keyboard": "^1.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -36,6 +41,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^5.0.9",
     "electron": "^34.2.0",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.0.0",
