feat: basic register

--- a/apps/kiosk/tsconfig.json
+++ b/apps/kiosk/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/orm": ["../../packages/orm"]
+      "$/orm": ["../../packages/orm"]
     }
   },
   "references": [{ "path": "../../packages/typescript-config/node.json" }, { "path": "../../packages/typescript-config/web.json" }]
