--- a/apps/kiosk/package.json
+++ b/apps/kiosk/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "csv": "^6.3.11",
     "electron-updater": "^6.3.9",
     "fs-jetpack": "^5.1.0",
     "postcss": "^8.5.3",
