--- a/apps/kiosk/package.json
+++ b/apps/kiosk/package.json
@@ -12,7 +12,7 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "unset NODE_OPTIONS && electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.5.2",
     "react-simple-keyboard": "^3.8.55",
     "react-touch-screen-keyboard": "^1.0.0",
+    "tailwind": "^4.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
