--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "tailwind": "^4.0.0"
   }
 }
